# uelis-words

./: .gitignore  Cargo.toml  README.md  convert.sh  setup.sh  transcribe.sh  transcribed.txt
.github/workflow/: main.yml
.github/workflows/: main.yml
output/: output-test.json
outputs/: 2023-11-08T14:13.1.json  2023-11-08T14:13.2.json  2023-11-13T14:13.1.json  2023-11-13T14:13.2.json  2023-11-15T14:13.1.json  2023-11-15T14:13.2.json
src/: main.rs
