[package]
name = "uelis-words"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
chrono = "0.4.31"
hound = "3.5.1"
reqwest = { version = "0.11.22", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
whisper-rs = "0.8.0"
